# suha

./: Cargo.toml  LICENSE  Makefile.toml  README.md  TODO.md  config.toml
.circleci/: config.yml
.github/workflows/: linux-main.yml  mac-main.yml  windows-main.yml
src/: app.rs  config.rs  context.rs  event.rs  event.rs.bak  main.rs  options.rs  run.rs  terminal.rs
src/event/: action.rs  command.rs  context.rs  keybind.rs  mod.rs  worker.rs
src/fs/: cache.rs  directory.rs  entry.rs  history.rs  icon.rs  icons.rs  metadata.rs  mod.rs  util.rs
src/ui/: component.rs  mod.rs  painter.rs
