[package]
name = "suha"
version = "0.1.0"
authors = ["xiuxiu62"]
description = "A crossplatform terminal filemanager"
repository = "https://github.com/xiuxiu62/suha"
license = "BSD"
keywords = ["fs", "cli", "input", "terminal", "color"]
exclude = ["target", "Cargo.lock"]
edition = "2018"

[dependencies]
alphanumeric-sort = "1.4.3"
crossbeam-channel = "0.5.1"
crossterm = { version = "0.20.0", features = ["event-stream"] }
futures = "0.3.16"
futures-core = { version = "0.3.16", optional = true, default-features = false }
futures-timer = "3.0.2"
tokio = { version = "1.10.0", features = ["full"] }
tui = { version = "0.15.0", default-features = false, features = ["crossterm"] }
unicode-width = "0.1.8"
